<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.example.healthy.ui.main.MainFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/main_fragment">

        <action
            android:id="@+id/action_MainFragment_to_DevicesFragment"
            app:destination="@id/DevicesFragment" />

    </fragment>

    <fragment
        android:id="@+id/DevicesFragment"
        android:name="com.example.healthy.ui.main.DevicesFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_devices" />

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.healthy.ui.main.ui.login.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/SettingFragment"
        android:name="com.example.healthy.ui.main.SettingFragment"
        android:label="@string/setting_fragment_label"
        tools:layout="@layout/fragment_setting"/>

    <fragment
        android:id="@+id/RegisterFragment"
        android:name="com.example.healthy.ui.main.ui.login.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_sign_up"/>

    <fragment
        android:id="@+id/SevenFragment"
        android:name="com.example.healthy.ui.main.SevenFragment"
        android:label="@string/seven_fragment_label"
        tools:layout="@layout/seven_fragment"/>

    <fragment
        android:id="@+id/LoginBySmsFragment"
        android:name="com.example.healthy.ui.main.ui.login.LoginBySmsFragment"
        android:label="Sms Fragment"
        tools:layout="@layout/fragment_login_sms"/>

</navigation>