<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/md_theme_light_primary"
    android:minHeight="80dp"
    android:padding="12dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/remote_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="id:"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/file_patch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp"
            android:text="patch"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@id/remote_id" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp"
            android:text="result:"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@id/file_patch" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_10_radius"
            android:text="@string/re_upload"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@id/get_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/get_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_10_radius"
            android:text="@string/re_get_result"
            app:layout_constraintEnd_toStartOf="@id/delete"
            app:layout_constraintStart_toEndOf="@id/upload"
            app:layout_constraintTop_toTopOf="@id/upload" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_10_radius"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/get_result"
            app:layout_constraintTop_toTopOf="@id/upload" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>