<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_primary">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/to_link_device"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/network_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/card_line" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/user_id">

        <com.example.healthy.chart.MyLineChart
            android:id="@+id/line_chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/white" />

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_list"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="@id/card_line"
        android:clipChildren="false"
        android:clipToPadding="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/control_device"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_26_radius"
        android:text="@string/to_link_device"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/network_status" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/save"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/baseline_article_24"
        android:text="@string/save"
        app:layout_constraintStart_toEndOf="@id/control_device"
        app:layout_constraintTop_toTopOf="@id/control_device" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/save_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/save"
        app:layout_constraintBottom_toBottomOf="@id/save"
        app:layout_constraintStart_toEndOf="@id/save"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="8dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/upload_history"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/control_device" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/file_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/control_device" />


</androidx.constraintlayout.widget.ConstraintLayout>